slider section modified

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
           <!--accordian-->
           <div>
           <div class="join join-vertical w-full">
-            <div class="collapse collapse-plus join-item border border-base-300">
+            <div class="collapse collapse-plus join-item border-b border-base-300">
               <input type="radio" name="my-accordion-4" checked="checked" /> 
               <div class="collapse-title text-xl font-medium">
                 Our Equipment
@@ -442,7 +442,7 @@
               </div>
             </div>
             <!--second question-->
-            <div class="collapse collapse-plus join-item border border-base-300">
+            <div class="collapse collapse-plus join-item border-b border-base-300">
               <input type="radio" name="my-accordion-4" /> 
               <div class="collapse-title text-xl font-medium">
                 Hockey Training
@@ -452,7 +452,7 @@
               </div>
             </div>
             <!--third question-->
-            <div class="collapse collapse-plus join-item border border-base-300">
+            <div class="collapse collapse-plus join-item border-b border-base-300">
               <input type="radio" name="my-accordion-4" /> 
               <div class="collapse-title text-xl font-medium">
                 Private Lessons
@@ -462,7 +462,7 @@
               </div>
             </div>
             <!--Fourth Question-->
-            <div class="collapse collapse-plus join-item border border-base-300">
+            <div class="collapse collapse-plus join-item border-b border-base-300">
               <input type="radio" name="my-accordion-4" /> 
               <div class="collapse-title text-xl font-medium">
                 Skill Touring
@@ -472,7 +472,7 @@
               </div>
             </div>
             <!--fifth question-->
-            <div class="collapse collapse-plus join-item border border-base-300">
+            <div class="collapse collapse-plus join-item border-b border-base-300">
               <input type="radio" name="my-accordion-4" /> 
               <div class="collapse-title text-xl font-medium">
                 Booking
@@ -482,7 +482,7 @@
               </div>
             </div>
             <!--Sixth Question-->
-            <div class="collapse collapse-plus join-item border border-base-300">
+            <div class="collapse collapse-plus join-item  border-base-300">
               <input type="radio" name="my-accordion-4" /> 
               <div class="collapse-title text-xl font-medium">
                 Progress
