--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                   <div id="slide1" class="carousel-item relative w-full lg:h-[550px]"
                       style="background-color: lightgray 0px 0px / 100% 100%;">
                       <div>
-                          <img class="lg:h-[550px] h-[220px]" src="./Images/1.png" alt="">
+                          <img class="lg:h-[550px] h-[220px] w-[1170px] rounded-lg" src="./Images/1.png" alt="">
                       </div>
                       <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                           <a href="#slide4" class="btn btn-circle">❮</a>
@@ -125,7 +125,7 @@
                   <!--slide 2-->
                   <div id="slide2" class="carousel-item relative w-full">
                       <div>
-                          <img class="lg:h-[550px] h-[220px]" src="./Images/1.png" alt="">
+                          <img class="lg:h-[550px] h-[220px] w-[1170px] rounded-lg" src="./Images/cuph.jpg" alt="">
                       </div>
                       <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                           <a href="#slide1" class="btn btn-circle">❮</a>
@@ -135,7 +135,7 @@
                   <!--slide 3-->
                   <div id="slide3" class="carousel-item relative w-full">
                       <div>
-                          <img class="lg:h-[550px] h-[220px]" src="./Images/1.png" alt="">
+                          <img class="lg:h-[550px] h-[220px] w-[1170px] rounded-lg" src="./Images/hockeycup.jpg" alt="">
                       </div>
                       <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                           <a href="#slide2" class="btn btn-circle">❮</a>
