our product section updated

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h3 class="text-4xl text-[#131318] font-extrabold">Hockey<span class="text-primary-colour">’</span>s</h3>
         </div>
         <div class="navbar-center hidden lg:flex">
-          <ul class="menu menu-horizontal px-1">
+          <ul class="menu menu-horizontal px-1 font-semibold">
             <li><a class="text-primary-colour">Home</a></li>
             <li><a>About</a></li>
             <li><a>Pages</a></li>
@@ -265,7 +265,7 @@
                 </div>
                 <h3 class="text-xl font-bold my-4">Jackets</h3> 
                 <p>This is our new arrival Jacket.It made by wool and 100% pure cotton.</p>
-                <div class="flex gap-5 my-4">
+                <div class="flex flex-col lg:flex-row gap-5 my-4">
                   <p><span class="text-primary-colour font-semibold">Price - $22.00</span></p>
                   <div class="flex gap-1">
                     <img src="./Images/Frame.svg" alt="">
@@ -294,7 +294,7 @@
               </div>
               <h3 class="text-xl font-bold my-4">World Cup flags Football</h3> 
               <p>This is our new arrival Football.Its made for the purpose of the upcomming World Cup.</p>
-              <div class="flex gap-5 my-4">
+              <div class="flex flex-col lg:flex-row gap-5 my-4">
                 <p><span class="text-primary-colour font-semibold">Price - $22.00</span></p>
                 <div class="flex gap-1">
                   <img src="./Images/Frame.svg" alt="">
@@ -323,7 +323,7 @@
               </div>
               <h3 class="text-xl font-bold my-4">Cap for Hockey</h3> 
               <p>This is our new arrival cap for hockey.It gives safety from the ultraviolet sunkiss.</p>
-              <div class="flex gap-5 mt-4">
+              <div class="flex flex-col lg:flex-row gap-5 mt-4">
                 <p><span class="text-primary-colour font-semibold">Price - $22.00</span></p>
                 <div class="flex gap-1">
                   <img src="./Images/Frame.svg" alt="">
@@ -352,7 +352,7 @@
               </div>
               <h3 class="text-xl font-bold my-4">Jersy</h3> 
               <p>This is our new arrival Jersy.It made by 100% pure cotton.</p>
-              <div class="flex gap-5 my-4">
+              <div class="flex flex-col lg:flex-row gap-5 my-4">
                 <p><span class="text-primary-colour font-semibold">Price - $22.00</span></p>
                 <div class="flex gap-1">
                   <img src="./Images/Frame.svg" alt="">
@@ -381,7 +381,7 @@
               </div>
               <h3 class="text-xl font-bold my-4">Helmets For Hockey</h3> 
               <p>This is our new arrival Helmet.It gives safety from unwanted shots to face,head,eyes.</p>
-              <div class="flex gap-5 my-4">
+              <div class="flex flex-col lg:flex-row gap-5 my-4">
                 <p><span class="text-primary-colour font-semibold">Price - $22.00</span></p>
                 <div class="flex gap-1">
                   <img src="./Images/Frame.svg" alt="">
@@ -410,7 +410,7 @@
                 </div>
                 <h3 class="text-xl font-bold my-4">World Cup Football</h3> 
                 <p>This is our new arrival Football.It also made for the purpose of upcomming world cup.</p>
-                <div class="flex gap-5 my-4">
+                <div class="flex flex-col lg:flex-row gap-5 my-4">
                   <p><span class="text-primary-colour font-semibold">Price - $22.00</span></p>
                   <div class="flex gap-1">
                     <img src="./Images/Frame.svg" alt="">
