--- a/index.html
+++ b/index.html
@@ -66,92 +66,51 @@
         </div>
       </div>
     <!--Banner-->
-    <!-- <div class="carousel w-full mt-12 lg:h-[550px]">
+    <div class="p-3">
+    <div class="carousel w-full lg:mt-12 lg:h-[550px]">
         <div id="slide1" class="carousel-item relative w-full" style="background-color: lightgray 0px 0px / 100% 100%;">
-        <div>
-          <img src="./Images/1.png" alt="">
-          <div class="max-w-[560px] h-[165px] border-2 p-4 bg-[#131318] rounded-2xl static lg:absolute top-[350px] right-10 border-black">
-            <h3 class="text-white text-[28px] font-extrabold mb-3">Meet all the heroes from the field</h3>
-            <p class="text-sm font-medium text-[#FFFFFF99]">Nine former Buffalo Sabres players are enshrined in the Hockey Hall of Fame: Dave Andreychuk, Dick Duff, Grant Fuhr, Clark Gillies, Dale Hawerchuk, Tim Horton, Pat LaFontaine, Dominik Hasek, and Gilbert Perreault</p>
+        <div class="lg:relative">
+          <img class="lg:h-[550px] h-[200px] w-[1170px]" src="./Images/1.png" alt="">
+          <div class="max-w-[540px] lg:h-[140px] border-2 p-4 bg-[#131318] mt-3 rounded-2xl static lg:absolute lg:top-[350px] lg:right-10 border-black">
+            <h3 class="text-white lg:text-2xl font-extrabold mb-3">Meet all the heroes from the field</h3>
+            <p class="text-sm font-medium text-[#FFFFFF99]">Seven former Buffalo Sabres players are enshrined in the Hockey Hall of Fame: Dave Andreychuk, Dick Duff, Grant Fuhr, Clark Gillies, Dale Hawerchuk, Tim Horton, Pat LaFontaine.</p>
           </div>
         </div> 
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <div class="absolute flex justify-between transform lg:-translate-y-1/2 -translate-y-[110px] left-5 right-5 top-1/2">
             <a href="#slide4" class="btn btn-circle">❮</a> 
             <a href="#slide2" class="btn btn-circle">❯</a>
           </div>
-        </div> -->
+        </div>
     <!--slide 2-->     
-        <!-- <div id="slide2" class="carousel-item relative w-full">
-          <div>
-            <img src="./Images/1.png" alt="">
-            <div class="max-w-[560px] h-[165px] border-2 p-4 bg-[#131318] rounded-2xl static lg:absolute top-[350px] right-10 border-black">
-              <h3 class="text-white text-[28px] font-extrabold mb-3">Meet all the heroes from the field</h3>
-              <p class="text-sm font-medium text-[#FFFFFF99]">Nine former Buffalo Sabres players are enshrined in the Hockey Hall of Fame: Dave Andreychuk, Dick Duff, Grant Fuhr, Clark Gillies, Dale Hawerchuk, Tim Horton, Pat LaFontaine, Dominik Hasek, and Gilbert Perreault</p>
+        <div id="slide2" class="carousel-item relative w-full">
+          <div class="lg:relative">
+            <img class="lg:h-[550px] h-[200px] w-[1170px] rounded-xl" src="./Images/cuph.jpg" alt="">
+            <div class="max-w-[540px] lg:h-[140px] border-2 p-4 bg-[#131318] mt-3 rounded-2xl static lg:absolute lg:top-[350px] lg:right-10 border-black">
+              <h3 class="text-white lg:text-2xl font-extrabold mb-3">Meet all the heroes from the field</h3>
+              <p class="text-sm font-medium text-[#FFFFFF99]">Seven former Buffalo Sabres players are enshrined in the Hockey Hall of Fame: Dave Andreychuk, Dick Duff, Grant Fuhr, Clark Gillies, Dale Hawerchuk, Tim Horton, Pat LaFontaine.</p>
             </div>
           </div> 
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <div class="absolute flex justify-between transform lg:-translate-y-1/2 -translate-y-[110px] left-5 right-5 top-1/2">
             <a href="#slide1" class="btn btn-circle">❮</a> 
             <a href="#slide3" class="btn btn-circle">❯</a>
           </div>
-        </div> -->
+        </div>
     <!--slide 3-->     
-        <!-- <div id="slide3" class="carousel-item relative w-full">
-          <div>
-            <img src="./Images/1.png" alt="">
-            <div class="max-w-[560px] h-[165px] border-2 p-4 bg-[#131318] rounded-2xl static lg:absolute top-[350px] right-10 border-black">
-              <h3 class="text-white text-[28px] font-extrabold mb-3">Meet all the heroes from the field</h3>
-              <p class="text-sm font-medium text-[#FFFFFF99]">Nine former Buffalo Sabres players are enshrined in the Hockey Hall of Fame: Dave Andreychuk, Dick Duff, Grant Fuhr, Clark Gillies, Dale Hawerchuk, Tim Horton, Pat LaFontaine, Dominik Hasek, and Gilbert Perreault</p>
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="lg:relative">
+            <img class="lg:h-[550px] h-[200px] w-[1170px] rounded-xl" src="./Images/hockeycup.jpg" alt="">
+            <div class="max-w-[540px] lg:h-[140px] border-2 p-4 bg-[#131318] mt-3 rounded-2xl static lg:absolute lg:top-[350px] lg:right-10 border-black">
+              <h3 class="text-white lg:text-2xl font-extrabold mb-3">Meet all the heroes from the field</h3>
+              <p class="text-sm font-medium text-[#FFFFFF99]">Seven former Buffalo Sabres players are enshrined in the Hockey Hall of Fame: Dave Andreychuk, Dick Duff, Grant Fuhr, Clark Gillies, Dale Hawerchuk, Tim Horton, Pat LaFontaine.</p>
             </div>
-          </div> 
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          </div>
+          <div class="absolute flex justify-between transform lg:-translate-y-1/2 -translate-y-[110px] left-5 right-5 top-1/2">
             <a href="#slide2" class="btn btn-circle">❮</a> 
             <a href="#slide4" class="btn btn-circle">❯</a>
           </div>
         </div> 
-      </div>   -->
-            <!--Banner-->
-            <div class="w-full lg:relative lg:my-12 p-3">
-              <div class="carousel w-full">
-                  <div id="slide1" class="carousel-item relative w-full lg:h-[550px]"
-                      style="background-color: lightgray 0px 0px / 100% 100%;">
-                      <div>
-                          <img class="lg:h-[550px] h-[220px] w-[1170px] rounded-lg" src="./Images/1.png" alt="">
-                      </div>
-                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                          <a href="#slide4" class="btn btn-circle">❮</a>
-                          <a href="#slide2" class="btn btn-circle">❯</a>
-                      </div>
-                  </div>
-                  <!--slide 2-->
-                  <div id="slide2" class="carousel-item relative w-full">
-                      <div>
-                          <img class="lg:h-[550px] h-[220px] w-[1170px] rounded-lg" src="./Images/cuph.jpg" alt="">
-                      </div>
-                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                          <a href="#slide1" class="btn btn-circle">❮</a>
-                          <a href="#slide3" class="btn btn-circle">❯</a>
-                      </div>
-                  </div>
-                  <!--slide 3-->
-                  <div id="slide3" class="carousel-item relative w-full">
-                      <div>
-                          <img class="lg:h-[550px] h-[220px] w-[1170px] rounded-lg" src="./Images/hockeycup.jpg" alt="">
-                      </div>
-                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                          <a href="#slide2" class="btn btn-circle">❮</a>
-                          <a href="#slide4" class="btn btn-circle">❯</a>
-                      </div>
-                  </div>
-              </div>
-              <!-- text -->
-              <div
-                  class="max-w-[560px] static lg:absolute border-2 p-4 bg-[#131318] rounded-2xl lg:top-[380px] lg:right-10 border-black">
-                  <h3 class="text-white lg:text-[28px] font-extrabold mb-3">Meet all the heroes from the field</h3>
-                  <p class="text-sm font-medium text-[#FFFFFF99]">Nine former Buffalo Sabres players are enshrined in the
-                      Hockey Hall of Fame: Dave Andreychuk, Dick Duff, Grant Fuhr, Clark Gillies, Dale Hawerchuk, Tim
-                      Horton, Pat LaFontaine, Dominik Hasek, and Gilbert Perreault</p>
-              </div>
-          </div>
+      </div> 
+    </div> 
     </header>
     <main class="max-w-[1170px] mx-auto mt-12 px-2">
   <!--proffessional hockey club-->
@@ -212,7 +171,7 @@
         </div>
         <!--layout-->
         <div class="grid grid-cols-1  lg:grid-cols-2 gap-6 my-12 px-1">
-          <div class="rounded-xl bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.3)),url(./Images/2.png)] bg-no-repeat bg-cover col-span-1 h-[338px]">
+          <div class="rounded-xl bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./Images/2.png)] bg-no-repeat bg-cover col-span-1 h-[338px]">
             <div class="lg:pt-32 pt-12 space-y-3 px-8">
               <h3 class="text-3xl font-extrabold text-white">Junior Programs</h3>
               <p class="text-white"> Junior program provides opportunities for players ages 16-to-20 to hone and enhance their skills and is an important part of the organization's overall efforts related to player development.</p>
@@ -220,7 +179,7 @@
             </div>
           </div>
           <!--card 2-->
-          <div class="rounded-xl bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.3)),url(./Images/3.png)] bg-no-repeat bg-cover col-span-1 h-[338px]">
+          <div class="rounded-xl bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./Images/3.png)] bg-no-repeat bg-cover col-span-1 h-[338px]">
             <div class="lg:pt-32 pt-12 space-y-3 px-8">
               <h3 class="text-3xl font-extrabold text-white">Teenager Programs</h3>
               <p class="text-white"> Teenagers may find it a challenge to learn hockey as so many players they would be playing with and against have had such a long head start.They are creating their ability unstoppable.</p>
@@ -228,8 +187,8 @@
             </div>
           </div>
           <!--card-3-->
-          <div class="rounded-xl bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.3)),url(./Images/4.png)] bg-no-repeat bg-cover h-[338px] lg:col-span-2">
-            <div class="lg:pt-32 pt-12 space-y-3 px-8 lg:w-[450px]">
+          <div class="rounded-xl bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./Images/4.png)] bg-no-repeat bg-cover bg-center lg:h-[438px] h-[338px] lg:col-span-2">
+            <div class="lg:pt-56 pt-12 space-y-3 px-8 lg:w-[450px]">
               <h3 class="text-3xl font-extrabold text-white">Professional Programs</h3>
               <p class="text-white"> Our program equips graduates with a  skillset that allows them to elevate  their performance in hockey-related roles and implement innovative.</p>
               <a class="btn bg-primary-colour text-white px-6 text-xl font-bold border-1 border-primary-colour">Register now!</a>
@@ -524,28 +483,28 @@
             <div class="flex flex-col lg:flex-row lg:gap-8">
               <div>
                 <h3 class="font-bold">Your Name</h3>
-                <input class="bg-[#13131808] lg:py-3 lg:pl-4 lg:pr-28 w-full p-3 rounded-lg my-4" type="text" placeholder="Enter Your full name">
+                <input class="bg-[#13131808] lg:py-3 lg:pl-4 lg:pr-28 w-full p-3 rounded-lg my-4 outline-none" type="text" placeholder="Enter Your full name">
               </div>
               <div>
                 <h3 class="font-bold">Your E-mail</h3>
-                <input class="bg-[#13131808] lg:py-3 lg:pl-4 lg:pr-28 w-full p-3 rounded-lg my-4" type="email" placeholder="Enter Your e-mail">
+                <input class="bg-[#13131808] lg:py-3 lg:pl-4 lg:pr-28 w-full p-3 rounded-lg my-4 outline-none" type="email" placeholder="Enter Your e-mail">
               </div>  
             </div>
             <div class="flex flex-col lg:flex-row lg:gap-8">
               <div>
                 <h3 class="font-bold">Subject</h3>
-                <input class="bg-[#13131808] lg:py-3 lg:pl-4 lg:pr-28 w-full p-3 rounded-lg my-4" type="text" placeholder="Enter Your Subject">
+                <input class="bg-[#13131808] lg:py-3 lg:pl-4 lg:pr-28 w-full p-3 rounded-lg my-4 outline-none" type="text" placeholder="Enter Your Subject">
               </div>
               <div>
                 <h3 class="font-bold">Phone Number</h3>
-                <input class="bg-[#13131808] lg:py-3 lg:pl-4 lg:pr-28 w-full p-3 rounded-lg my-4" type="text" placeholder="Enter Your Phone number">
+                <input class="bg-[#13131808] lg:py-3 lg:pl-4 lg:pr-28 w-full p-3 rounded-lg my-4 outline-none" type="text" placeholder="Enter Your Phone number">
               </div>  
             </div>
             <div>
               <h3 class="font-bold">Message</h3>
-              <textarea class="bg-[#13131808] my-4 p-6 rounded-lg w-full lg:w-[655px] h-[370px]" name="" id="" placeholder="Write Your Messages"></textarea>
+              <textarea class="bg-[#13131808] my-4 p-6 outline-none rounded-lg w-full lg:w-[655px] h-[370px]" name="" id="" placeholder="Write Your Messages"></textarea>
             </div>
-            <button class="btn w-full bg-primary-colour text-white lg:w-[655px] lg:text-lg">Send Message</button>
+            <button class="btn w-full bg-primary-colour outline-none text-white lg:w-[655px] lg:text-lg">Send Message</button>
           </div>
         </div>
         <div class="rounded-xl bg-[#13131808] text-center py-12">
